--- a/Large_Spiritual_Candle.html
+++ b/Large_Spiritual_Candle.html
@@ -132,7 +132,7 @@
   </li>
 
   <!-- begin wwww.htmlcommentbox.com -->
-<<div class="displaynone">
+<div class="displaynone">
 <li>
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML </a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
@@ -150,20 +150,44 @@
 </div>
 </li>
 
-  <div class="cat">
+  
+<div class="cat">
 <li>
+  <a href="AllCandles.html">
+  <img src="images/excandle.jpg" alt="example candle" width="125" height="150">
+    </a>
+    <br>
   <a href="AllCandles.html">Candles</a>
 </li>
 <li>
+  <a href="#">
+  <img src="images/p.png" alt="example candle" width="125" height="150">
+  <br>
 <a href="#">Painting</a>
 </li>
 <li>
+  <a href="#"><img src="images/b.png" alt="example candle" width="125" height="150"></a>
+  <br>
+
 <a href="#">Bath and Oils</a>
 </li>
+<li>
+  <a href="#"><img src="images/t.jpg" alt="Apperel" width="125" height="150"></a>
+  <br>
+  <a href="#">Apparel</a>
+</li>
+<li>
+  <a href="#"><img src="images/c.jpg" alt="Apperel" width="125" height="150"></a>
+  <br>
+  <a href="#">Natural Cleaners</a>
+</li>
+
 </div>
 
 </ul>
 <a href="https://www.usps.com/business/prices.htm" target="_blank">*shipping rate depends on amount of items ordered + size.</a>
+<br>
+<a href="productreviews.html" title="Reviews" target="_blank">Comments And Reviews</a>
 
 
 
