--- a/productreviews.html
+++ b/productreviews.html
@@ -6,40 +6,32 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title>Welcome to Starshine Botanicals</title>
+    <title>Welcome to Starshine Botanicals / Reviews</title>
     <link href="/stylesheets/site.css" rel="stylesheet" />
     <script src="/javascripts/site.js"></script>
   </head>
   <body>
      
     <ul>
-
   <li><a href="index.html"  target="_parent"><img src="images/card.jpg" alt="logo" width="250" ></a></li>
 <br>
 
-
   <li>
-   <img id="frontpage" src="images/pic.jpg" alt="Owner Picture" width="150" height="150">
-  <p>
-   Hi My name is Della Dugger. All of my products are for healing and other uses. They are 100% sustainable handcrafted and repurposable containers.
-   .Each product is made with love for the the purpose of healing, prosperity and abundance. Natural essential oils and all natural herbs are the benefits to these products.
-  </p>
-  <p>
-  Click one of the images below to find more info about my products.
-
-  </p>
-  <br>
-  <br>
+    <h3>Reviews / Comments </h3>
+    <div class="commentbox"></div>
+  <script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
+  <script>commentBox('5666712649203712-proj')</script>
   </li>
-
-
   <li>
+<div class="footer-social-links">
+  <a href="#" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
+  <a href="#" title="Google+" target="_blank"><i class="fa fa-google-plus"></i></a>
+  <a href="#" title="LinkedIn+" target="_blank"><i class="fa fa-linkedin"></i></a>
+  <a href="#" title="Instagram" target="_blank"><i class="fa fa-instagram"></i></a>
+</div>
+</li>
 
-    <li>
-
-
-    </li>
-
+     
 <div class="cat">
 <li>
   <a href="AllCandles.html">
@@ -73,18 +65,8 @@
 
 </div>
 
-
-   <li>
-<div class="footer-social-links">
-  <a href="#" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
-  <a href="#" title="Google+" target="_blank"><i class="fa fa-google-plus"></i></a>
-  <a href="#" title="LinkedIn+" target="_blank"><i class="fa fa-linkedin"></i></a>
-  <a href="#" title="Instagram" target="_blank"><i class="fa fa-instagram"></i></a>
-</div>
-</li>
-
-  </li>
 </ul>
+
 <a href="https://www.usps.com/business/prices.htm" target="_blank">*shipping rate depends on amount of items ordered + size.</a>
 <br>
 <a href="productreviews.html" title="Reviews" target="_blank">Comments And Reviews</a>
