--- a/index.html
+++ b/index.html
@@ -25,10 +25,17 @@
    .Each product is made with love for the the purpose of healing, prosperity and abundance. Natural essential oils and all natural herbs are the benefits to these products.
   </p>
   <p>
+    <div class="embedsocial-hashtag" data-ref="5cbfd4a35a2c2b54284218880f60fef22f1fdf69"> <a class="feed-powered-by-es feed-powered-by-es-feed-new" href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Widget by EmbedSocial"> Widget by EmbedSocial<span>→</span> </a> </div> <script> (function(d, s, id) { var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js); }(document, "script", "EmbedSocialHashtagScript")); </script>
+  </p>.
+<p>
+       <audio controls>
+       <source src="audio/zen.mp3" type="audio/mpeg">
+     </audio>
+</p>
+  <p>
   Click one of the images below to find more info about my products.
 
   </p>
-  <br>
   <br>
   </li>
 
@@ -75,7 +82,8 @@
 
 
    <li>
-<div class="footer-social-links">
+
+<div class="footer-social-links displaynone">
   <a href="#" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
   <a href="#" title="Google+" target="_blank"><i class="fa fa-google-plus"></i></a>
   <a href="#" title="LinkedIn+" target="_blank"><i class="fa fa-linkedin"></i></a>
