--- a/AllCandles.html
+++ b/AllCandles.html
@@ -36,7 +36,8 @@
 </li>
 
   <li>
-<div class="footer-social-links">
+
+<div class="footer-social-links displaynone">
   <a href="#" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
   <a href="#" title="Google+" target="_blank"><i class="fa fa-google-plus"></i></a>
   <a href="#" title="LinkedIn+" target="_blank"><i class="fa fa-linkedin"></i></a>
