--- a/productreviews.html
+++ b/productreviews.html
@@ -9,9 +9,11 @@
     <title>Welcome to Starshine Botanicals / Reviews</title>
     <link href="/stylesheets/site.css" rel="stylesheet" />
     <script src="/javascripts/site.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8633819278728948"
+     crossorigin="anonymous"></script>
   </head>
   <body>
-     
+
     <ul>
   <li><a href="index.html"  target="_parent"><img src="images/card.jpg" alt="logo" width="250" ></a></li>
 <br>
