--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <title>Welcome to Starshine Botanicals</title>
     <link href="/stylesheets/site.css" rel="stylesheet" />
     <script src="/javascripts/site.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8633819278728948"
+     crossorigin="anonymous"></script>
   </head>
   <body>
-     
+
     <ul>
 
   <li><a href="index.html"  target="_parent"><img src="images/card.jpg" alt="logo" width="250" ></a></li>
@@ -23,6 +25,9 @@
   <p>
    Hi My name is Della Dugger. All of my products are for healing and other uses. They are 100% sustainable handcrafted and repurposable containers.
    .Each product is made with love for the the purpose of healing, prosperity and abundance. Natural essential oils and all natural herbs are the benefits to these products.
+  </p>
+  <p>
+  Need to inquire about any of my products use my <a class="nodeco"href="contact.html">contact page.</a>
   </p>
   <p>
     <div class="embedsocial-hashtag" data-ref="5cbfd4a35a2c2b54284218880f60fef22f1fdf69"> <a class="feed-powered-by-es feed-powered-by-es-feed-new" href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Widget by EmbedSocial"> Widget by EmbedSocial<span>→</span> </a> </div> <script> (function(d, s, id) { var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js); }(document, "script", "EmbedSocialHashtagScript")); </script>
