--- a/4ozbotterbutter.html
+++ b/4ozbotterbutter.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title>Welcome to Starshine Botanicals / small</title>
+    <title>Welcome to Starshine Botanicals 4oz boty butter</title>
     <link href="/stylesheets/site.css" rel="stylesheet" />
     <script src="/javascripts/site.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8633819278728948"
@@ -20,20 +20,20 @@
 
   
 <li class="products">
-  <p><img src="p/1.jpg" alt="example candle" width="250" height="300"> </p>
-   <p>Size: Small Candle </p>
-    <p>Price: $12 + $12 shipping </p>
+  <p><img src="p/6.jpg" alt="example candle" width="250" height="300"> </p>
+   <p>Size: 4oz boty butter </p>
+    <p>Price: $10 + $12 shipping </p>
     <p>Color: white </p>
-    <p>Scent: Mango and orange essential oil </p>
-    <p>Details: Pink Container with lid 8oz
+    <p>Scent: plumeria </p>
+    <p>Details: all over boty butter.
     </p>
 
 
     <div id="smart-button-container">
       <div style="text-align: center;">
         <div style="margin-bottom: 1.25rem;">
-          <p> Small Candle</p>
-          <select id="item-options"><option value="Small Candle" price="12"> Small Candle - 12 USD</option></select>
+          <p> 4oz boty butter</p>
+          <select id="item-options"><option value="4oz boty butter" price="10"> 4oz boty butter - 10 USD</option></select>
           <select style="visibility: hidden" id="quantitySelect"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select>
         </div>
       <div id="paypal-button-container"></div>
@@ -49,9 +49,9 @@
     if (!isNaN(quantity)) {
       quantitySelect.style.visibility = "visible";
     }
-    var orderDescription = 'Small Candle';
+    var orderDescription = '4oz boty butter';
     if(orderDescription === '') {
-      orderDescription = 'Pink Container with lid 8oz';
+      orderDescription = 'all over boty butter.';
     }
     paypal.Buttons({
       style: {
@@ -188,9 +188,6 @@
 </div>
 
 </ul>
-
-
-
 <a href="https://www.usps.com/business/prices.htm" target="_blank">*shipping rate depends on amount of items ordered + size.</a>
 <br>
 <a href="productreviews.html" title="Reviews" target="_blank">Comments And Reviews</a>
