--- a/AllCandles.html
+++ b/AllCandles.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title>Welcome to Starshine Botanicals / All Products</title>
+    <title>Welcome to Starshine Botanicals / All AllCandles</title>
     <link href="/stylesheets/site.css" rel="stylesheet" />
     <script src="/javascripts/site.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8633819278728948"
@@ -26,7 +26,7 @@
   <img src=" images/excandle.jpg" alt="0" width="250" height="300">
   </a>
   <a href = "Small_Spiritual_Candle.html" title="Small_Spiritual_Candle" target="_parent">
-  <img src=" images/excandle.jpg" alt="1" width="250" height="300">
+  <img src=" p/1.jpg" alt="1" width="250" height="300">
   </a>
   <a href = "Med_Spiritual_Candle.html" title="Med_Spiritual_Candle" target="_parent">
   <img src=" images/excandle.jpg" alt="2" width="250" height="300">
@@ -61,22 +61,22 @@
 <div class="cat">
 <li>
   <a href="AllCandles.html">
-  <img src="images/excandle.jpg" alt="example candle" width="125" height="150">
+  <img src="p/1.jpg" alt="example candle" width="125" height="150">
     </a>
     <br>
   <a href="AllCandles.html">Candles</a>
 </li>
 <li>
-  <a href="#">
-  <img src="images/p.png" alt="example candle" width="125" height="150">
+  <a href="AllPaintings.html">
+  <img src="p/3.jpg" alt="small Paintings" width="125" height="150">
   <br>
-<a href="#">Painting</a>
+<a href="AllPaintings.html">Painting</a>
 </li>
 <li>
-  <a href="#"><img src="images/b.png" alt="example candle" width="125" height="150"></a>
+  <a href="Bath_Butters_Oils.html"><img src="p/6.jpg" alt="bodybutter" width="125" height="150"></a>
   <br>
 
-<a href="#">Bath and Oils</a>
+<a href="Bath_Butters_Oils.html">Bath, Butters, Oils</a>
 </li>
 <li>
   <a href="#"><img src="images/t.jpg" alt="Apperel" width="125" height="150"></a>
