--- a/AllPaintings.html
+++ b/AllPaintings.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title>Welcome to Starshine Botanicals / contact</title>
+    <title>Welcome to Starshine Botanicals / All Paintings</title>
     <link href="/stylesheets/site.css" rel="stylesheet" />
     <script src="/javascripts/site.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8633819278728948"
@@ -18,14 +18,15 @@
   <li><a href="index.html"  target="_parent"><img src="images/card.jpg" alt="logo" width="250" ></a></li>
 <br>
 
-   <p>email:
-   </p>
-   <p>
-    PhoneNumber:
-   </p>
-   <p>
-   social Media:
-   </p>
+  <li><h1>All Paintings </h1></li>
+<li>
+<div class="AllProducts">
+  <a href = "Small_Paintings.html" title="Small_Paintings" target="_parent">
+  <img src=" p/3.jpg" alt="0" width="250" height="300">
+  </a>
+</div>
+</li>
+
   <li>
 
 <div class="footer-social-links displaynone">
@@ -35,6 +36,16 @@
   <a href="#" title="Instagram" target="_blank"><i class="fa fa-instagram"></i></a>
 </div>
 </li>
+
+  <!-- begin wwww.htmlcommentbox.com -->
+<div class="displaynone">
+<li>
+ <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML </a> is loading comments...</div>
+ <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16798&num=10&ts=1662682564112");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+</li>
+<!-- end www.htmlcommentbox.com -->
+</div>
 
   
 <div class="cat">
@@ -71,9 +82,6 @@
 </div>
 
 </ul>
-
-
-
 <a href="https://www.usps.com/business/prices.htm" target="_blank">*shipping rate depends on amount of items ordered + size.</a>
 <br>
 <a href="productreviews.html" title="Reviews" target="_blank">Comments And Reviews</a>
