--- a/Small_Paintings.html
+++ b/Small_Paintings.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title>Welcome to Starshine Botanicals / small</title>
+    <title>Welcome to Starshine Botanicals / Small Painting</title>
     <link href="/stylesheets/site.css" rel="stylesheet" />
     <script src="/javascripts/site.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8633819278728948"
@@ -20,20 +20,20 @@
 
   
 <li class="products">
-  <p><img src="p/1.jpg" alt="example candle" width="250" height="300"> </p>
-   <p>Size: Small Candle </p>
-    <p>Price: $12 + $12 shipping </p>
-    <p>Color: white </p>
-    <p>Scent: Mango and orange essential oil </p>
-    <p>Details: Pink Container with lid 8oz
+  <p><img src="p/3.jpg" alt="example candle" width="250" height="300"> </p>
+   <p>Size: Small Paintinge </p>
+    <p>Price: $100 + $10 shipping </p>
+    <p>Color: red </p>
+    <p>Scent: orange </p>
+    <p>Details: canvis
     </p>
 
 
     <div id="smart-button-container">
       <div style="text-align: center;">
         <div style="margin-bottom: 1.25rem;">
-          <p> Small Candle</p>
-          <select id="item-options"><option value="Small Candle" price="12"> Small Candle - 12 USD</option></select>
+          <p> Small Paintinge</p>
+          <select id="item-options"><option value="Small Paintinge" price="100"> Small Paintinge - 100 USD</option></select>
           <select style="visibility: hidden" id="quantitySelect"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select>
         </div>
       <div id="paypal-button-container"></div>
@@ -42,16 +42,16 @@
     <script src="https://www.paypal.com/sdk/js?client-id=sb&enable-funding=venmo&currency=USD" data-sdk-integration-source="button-factory"></script>
     <script>
       function initPayPalButton() {
-        var shipping = 12 ;
+        var shipping = 10 ;
         var itemOptions = document.querySelector("#smart-button-container #item-options");
     var quantity = parseInt(10);
     var quantitySelect = document.querySelector("#smart-button-container #quantitySelect");
     if (!isNaN(quantity)) {
       quantitySelect.style.visibility = "visible";
     }
-    var orderDescription = 'Small Candle';
+    var orderDescription = 'Small Paintinge';
     if(orderDescription === '') {
-      orderDescription = 'Pink Container with lid 8oz';
+      orderDescription = 'canvis';
     }
     paypal.Buttons({
       style: {
@@ -188,9 +188,6 @@
 </div>
 
 </ul>
-
-
-
 <a href="https://www.usps.com/business/prices.htm" target="_blank">*shipping rate depends on amount of items ordered + size.</a>
 <br>
 <a href="productreviews.html" title="Reviews" target="_blank">Comments And Reviews</a>
