--- a/index.html
+++ b/index.html
@@ -55,22 +55,22 @@
 <div class="cat">
 <li>
   <a href="AllCandles.html">
-  <img src="images/excandle.jpg" alt="example candle" width="125" height="150">
+  <img src="p/1.jpg" alt="example candle" width="125" height="150">
     </a>
     <br>
   <a href="AllCandles.html">Candles</a>
 </li>
 <li>
-  <a href="#">
-  <img src="images/p.png" alt="example candle" width="125" height="150">
+  <a href="AllPaintings.html">
+  <img src="p/3.jpg" alt="small Paintings" width="125" height="150">
   <br>
-<a href="#">Painting</a>
+<a href="AllPaintings.html">Painting</a>
 </li>
 <li>
-  <a href="#"><img src="images/b.png" alt="example candle" width="125" height="150"></a>
+  <a href="Bath_Butters_Oils.html"><img src="p/6.jpg" alt="bodybutter" width="125" height="150"></a>
   <br>
 
-<a href="#">Bath and Oils</a>
+<a href="Bath_Butters_Oils.html">Bath, Butters, Oils</a>
 </li>
 <li>
   <a href="#"><img src="images/t.jpg" alt="Apperel" width="125" height="150"></a>
