--- a/4ozbodybutter.html
+++ b/4ozbodybutter.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title>Welcome to Starshine Botanicals Herbal Bath Soak</title>
+    <title>Welcome to Starshine Botanicals 4oz boty butter</title>
     <link href="/stylesheets/site.css" rel="stylesheet" />
     <script src="/javascripts/site.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8633819278728948"
@@ -18,26 +18,25 @@
   <li><a href="index.html"  target="_parent"><img src="images/card.jpg" alt="logo" width="250" ></a></li>
 <br>
 
-  <img src="p/11.jpg" alt="topsideofherbalbath" width="250" height="300">
   
 <li class="products">
-  <p><img src="p/10.jpg" alt="example candle" width="250" height="300"> </p>
-   <p>Size: Herbal Bath Soak </p>
+  <p><img src="p/6.jpg" alt="example candle" width="250" height="300"> </p>
+   <p>Size: 4oz body butter </p>
     <p>Price: $10  </p>
     <div class="displaynone">
       + $12 shipping
     </div>
-    <p>Color: multi </p>
-    <p>Scent:  </p>
-    <p>Details: Clear Container
+    <p>Color: white </p>
+    <p>Scent: plumeria </p>
+    <p>Details: all over body butter.
     </p>
 
 
     <div id="smart-button-container">
       <div style="text-align: center;">
         <div style="margin-bottom: 1.25rem;">
-          <p> Herbal Bath Soak</p>
-          <select id="item-options"><option value="Herbal Bath Soak" price="10"> Herbal Bath Soak - 10 USD</option></select>
+          <p> 4oz body butter</p>
+          <select id="item-options"><option value="4oz body butter" price="10"> 4oz body butter - 10 USD</option></select>
           <select style="visibility: hidden" id="quantitySelect"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select>
         </div>
       <div id="paypal-button-container"></div>
@@ -53,9 +52,9 @@
     if (!isNaN(quantity)) {
       quantitySelect.style.visibility = "visible";
     }
-    var orderDescription = 'Herbal Bath Soak';
+    var orderDescription = '4oz body butter';
     if(orderDescription === '') {
-      orderDescription = 'Clear Container';
+      orderDescription = 'all over body butter.';
     }
     paypal.Buttons({
       style: {
@@ -192,9 +191,6 @@
 </div>
 
 </ul>
-
-
-
 <a href="https://www.usps.com/business/prices.htm" target="_blank">*shipping rate depends on amount of items ordered + size.</a>
 <br>
 <a href="productreviews.html" title="Reviews" target="_blank">Comments And Reviews</a>
