--- a/Bath_Butters_Oils.html
+++ b/Bath_Butters_Oils.html
@@ -21,7 +21,7 @@
   <li><h1>All Bath</h1></li>
 <li>
 <div class="AllProducts">
-  <a href = "4ozbotterbutter.html" title="4ozbotterbutter" target="_parent">
+  <a href = "4ozbodybutter.html" title="4ozbodybutter" target="_parent">
   <img src=" p/6.jpg" alt="0" width="250" height="300">
   </a>
   <a href = "rosebathoil.html" title="rosebathoil" target="_parent">
@@ -29,6 +29,15 @@
   </a>
   <a href = "herbalBathSoak.html" title="herbalBathSoak" target="_parent">
   <img src=" p/10.jpg" alt="2" width="250" height="300">
+  </a>
+  <a href = "cbdbathbomb25mg.html" title="cbdbathbomb25mg" target="_parent">
+  <img src=" p/7.jpg" alt="3" width="250" height="300">
+  </a>
+  <a href = "8ozbodybutter.html" title="8ozbodybutter" target="_parent">
+  <img src=" p/12.jpg" alt="4" width="250" height="300">
+  </a>
+  <a href = "yonisteam.html" title="yonisteam" target="_parent">
+  <img src=" p/15.jpg" alt="5" width="250" height="300">
   </a>
 </div>
 </li>
