--- a/Med_Spiritual_Candle.html
+++ b/Med_Spiritual_Candle.html
@@ -22,7 +22,10 @@
 <li class="products">
   <p><img src="images/excandle.jpg" alt="example candle" width="250" height="300"> </p>
    <p>Size: Med Spirtual Candle </p>
-    <p>Price: $15 + $15 shipping </p>
+    <p>Price: $15  </p>
+    <div class="displaynone">
+      + $15 shipping
+    </div>
     <p>Color: red </p>
     <p>Scent: orange </p>
     <p>Details: Glass Container no cap
