--- a/Small_Spiritual_Candle.html
+++ b/Small_Spiritual_Candle.html
@@ -22,7 +22,10 @@
 <li class="products">
   <p><img src="p/1.jpg" alt="example candle" width="250" height="300"> </p>
    <p>Size: Small Candle </p>
-    <p>Price: $12 + $12 shipping </p>
+    <p>Price: $12  </p>
+    <div class="displaynone">
+      + $12 shipping
+    </div>
     <p>Color: white </p>
     <p>Scent: Mango and orange essential oil </p>
     <p>Details: Pink Container with lid 8oz
