--- a/cbdbathbomb25mg.html
+++ b/cbdbathbomb25mg.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title>Welcome to Starshine Botanicals 4oz boty butter</title>
+    <title>Welcome to Starshine Botanicals bath bomb</title>
     <link href="/stylesheets/site.css" rel="stylesheet" />
     <script src="/javascripts/site.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8633819278728948"
@@ -20,20 +20,23 @@
 
   
 <li class="products">
-  <p><img src="p/6.jpg" alt="example candle" width="250" height="300"> </p>
-   <p>Size: 4oz boty butter </p>
-    <p>Price: $10 + $12 shipping </p>
-    <p>Color: white </p>
-    <p>Scent: plumeria </p>
-    <p>Details: all over boty butter.
+  <p><img src="p/7.jpg" alt="example candle" width="250" height="300"> </p>
+   <p>Size: bath bomb wih cbd 25mg </p>
+    <p>Price: $12.5  </p>
+    <div class="displaynone">
+      + $12 shipping
+    </div>
+    <p>Color: multi </p>
+    <p>Scent: multi </p>
+    <p>Details: bath bomb to relax
     </p>
 
 
     <div id="smart-button-container">
       <div style="text-align: center;">
         <div style="margin-bottom: 1.25rem;">
-          <p> 4oz boty butter</p>
-          <select id="item-options"><option value="4oz boty butter" price="10"> 4oz boty butter - 10 USD</option></select>
+          <p> bath bomb wih cbd 25mg</p>
+          <select id="item-options"><option value="bath bomb wih cbd 25mg" price="12.5"> bath bomb wih cbd 25mg - 12.5 USD</option></select>
           <select style="visibility: hidden" id="quantitySelect"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select>
         </div>
       <div id="paypal-button-container"></div>
@@ -49,9 +52,9 @@
     if (!isNaN(quantity)) {
       quantitySelect.style.visibility = "visible";
     }
-    var orderDescription = '4oz boty butter';
+    var orderDescription = 'bath bomb wih cbd 25mg';
     if(orderDescription === '') {
-      orderDescription = 'all over boty butter.';
+      orderDescription = 'bath bomb to relax';
     }
     paypal.Buttons({
       style: {
