--- a/AllCandles.html
+++ b/AllCandles.html
@@ -7,10 +7,17 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
     <title>Welcome to Starshine Botanicals / All AllCandles</title>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+
+
+
     <link href="/stylesheets/site.css" rel="stylesheet" />
     <script src="/javascripts/site.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8633819278728948"
-     crossorigin="anonymous"></script>
+
+
+
   </head>
   <body>
 
@@ -22,17 +29,11 @@
 <li><h1>All Candles small - large</h1></li>
 <li>
 <div class="AllProducts">
-  <a href = "Tea_Spiritual_Candle.html" title="Tea_Spiritual_Candle" target="_parent">
-  <img src=" images/excandle.jpg" alt="0" width="250" height="300">
-  </a>
   <a href = "Small_Spiritual_Candle.html" title="Small_Spiritual_Candle" target="_parent">
-  <img src=" p/1.jpg" alt="1" width="250" height="300">
+  <img src=" p/1.jpg" alt="0" width="250" height="300">
   </a>
-  <a href = "Med_Spiritual_Candle.html" title="Med_Spiritual_Candle" target="_parent">
-  <img src=" images/excandle.jpg" alt="2" width="250" height="300">
-  </a>
-  <a href = "Large_Spiritual_Candle.html" title="Large_Spiritual_Candle" target="_parent">
-  <img src=" images/excandle.jpg" alt="3" width="250" height="300">
+  <a href = "hippielight.html" title="hippielight" target="_parent">
+  <img src=" p/4.jpg" alt="1" width="250" height="300">
   </a>
 </div>
 </li>
@@ -97,7 +98,7 @@
 <a href="productreviews.html" title="Reviews" target="_blank">Comments And Reviews</a>
 
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 
 </html>
