--- a/Large_Spiritual_Candle.html
+++ b/Large_Spiritual_Candle.html
@@ -49,8 +49,7 @@
       <div id="paypal-button-container"></div>
       </div>
     </div>
-    <script src="https://www.paypal.com/sdk/js?client-id=ATexy4aLGCriKIYOKP9QfRYkI_W7yqJKet9yXcEt_eCrefObyIjchPdD0ehFAMFb-2z9NSOL5-vxLhTB
-&enable-funding=venmo&currency=USD" data-sdk-integration-source="button-factory"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=ATexy4aLGCriKIYOKP9QfRYkI_W7yqJKet9yXcEt_eCrefObyIjchPdD0ehFAMFb-2z9NSOL5-vxLhTB&currency=USD" data-sdk-integration-source="button-factory"></script>
     <script>
       function initPayPalButton() {
         var shipping = 15 ;
