--- a/yonisteam.html
+++ b/yonisteam.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title>Welcome to Starshine Botanicals 8oz body butter</title>
+    <title>Welcome to Starshine Botanicals flower power</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
@@ -28,7 +28,7 @@
   
 <li class="products">
   <p><img src="p/15.jpg" alt="example candle" width="250" height="300"> </p>
-   <p>Size: herbal yoni steam </p>
+   <p>Size: flower power yoni steam </p>
     <p>Price: $12  </p>
     <div class="displaynone">
       + $12 shipping
@@ -42,15 +42,14 @@
     <div id="smart-button-container">
       <div style="text-align: center;">
         <div style="margin-bottom: 1.25rem;">
-          <p> herbal yoni steam</p>
-          <select id="item-options"><option value="herbal yoni steam" price="12"> herbal yoni steam - 12 USD</option></select>
+          <p> flower power yoni steam</p>
+          <select id="item-options"><option value="flower power yoni steam" price="12"> flower power yoni steam - 12 USD</option></select>
           <select style="visibility: hidden" id="quantitySelect"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select>
         </div>
       <div id="paypal-button-container"></div>
       </div>
     </div>
-    <script src="https://www.paypal.com/sdk/js?client-id=ATexy4aLGCriKIYOKP9QfRYkI_W7yqJKet9yXcEt_eCrefObyIjchPdD0ehFAMFb-2z9NSOL5-vxLhTB
-&enable-funding=venmo&currency=USD" data-sdk-integration-source="button-factory"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=ATexy4aLGCriKIYOKP9QfRYkI_W7yqJKet9yXcEt_eCrefObyIjchPdD0ehFAMFb-2z9NSOL5-vxLhTB&currency=USD" data-sdk-integration-source="button-factory"></script>
     <script>
       function initPayPalButton() {
         var shipping = 12 ;
@@ -60,7 +59,7 @@
     if (!isNaN(quantity)) {
       quantitySelect.style.visibility = "visible";
     }
-    var orderDescription = 'herbal yoni steam';
+    var orderDescription = 'flower power yoni steam';
     if(orderDescription === '') {
       orderDescription = 'natural herbs with sea salt';
     }
