--- a/AllCrystals.html
+++ b/AllCrystals.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title>Welcome to Starshine Botanicals / All AllCandles</title>
+    <title>Welcome to Starshine Botanicals / All Paintings</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
@@ -25,15 +25,11 @@
   <li><a href="index.html"  target="_parent"><img src="images/card.jpg" alt="logo" width="250" ></a></li>
 <br>
 
-  
-<li><h1>All Candles small - large</h1></li>
+  <li><h1>Crystals</h1></li>
 <li>
 <div class="AllProducts">
-  <a href = "Small_Spiritual_Candle.html" title="Small_Spiritual_Candle" target="_parent">
-  <img src=" p/1.jpg" alt="0" width="250" height="300">
-  </a>
-  <a href = "hippielight.html" title="hippielight" target="_parent">
-  <img src=" p/4.jpg" alt="1" width="250" height="300">
+  <a href = "Crystal.html" title="Small_crystals" target="_parent">
+  <img src=" p/16.jpg" alt="0" width="250" height="300">
   </a>
 </div>
 </li>
