--- a/Small_Paintings.html
+++ b/Small_Paintings.html
@@ -31,7 +31,7 @@
    <p>Size: Small Paintinge </p>
     <p>Price: $60  </p>
     <div class="displaynone">
-      + $10 shipping
+      + $3 shipping
     </div>
     <p>Color: red </p>
     <p>Scent:  </p>
@@ -52,7 +52,7 @@
     <script src="https://www.paypal.com/sdk/js?client-id=ATexy4aLGCriKIYOKP9QfRYkI_W7yqJKet9yXcEt_eCrefObyIjchPdD0ehFAMFb-2z9NSOL5-vxLhTB&currency=USD" data-sdk-integration-source="button-factory"></script>
     <script>
       function initPayPalButton() {
-        var shipping = 10 ;
+        var shipping = 15 ;
         var itemOptions = document.querySelector("#smart-button-container #item-options");
     var quantity = parseInt(10);
     var quantitySelect = document.querySelector("#smart-button-container #quantitySelect");
@@ -167,32 +167,27 @@
 <div class="cat">
 <li>
   <a href="AllCandles.html">
-  <img src="p/1.jpg" alt="example candle" width="125" height="150">
+  <img src="p/1.jpg" alt="example candle" width="175" height="200">
     </a>
     <br>
   <a href="AllCandles.html">Candles</a>
 </li>
 <li>
   <a href="AllPaintings.html">
-  <img src="p/3.jpg" alt="small Paintings" width="125" height="150">
+  <img src="p/3.jpg" alt="small Paintings" width="175" height="200">
   <br>
 <a href="AllPaintings.html">Painting</a>
 </li>
 <li>
-  <a href="Bath_Butters_Oils.html"><img src="p/6.jpg" alt="bodybutter" width="125" height="150"></a>
+  <a href="Bath_Butters_Oils.html"><img src="p/6.jpg" alt="bodybutter" width="175" height="200"></a>
   <br>
 
 <a href="Bath_Butters_Oils.html">Bath, Butters, Oils</a>
 </li>
 <li>
-  <a href="#"><img src="images/t.jpg" alt="Apperel" width="125" height="150"></a>
+  <a href="AllCrystals.html"><img src="p/16.jpg" alt="Apperel" width="175" height="200"></a>
   <br>
-  <a href="#">Apparel</a>
-</li>
-<li>
-  <a href="#"><img src="images/c.jpg" alt="Apperel" width="125" height="150"></a>
-  <br>
-  <a href="#">Natural Cleaners</a>
+  <a href="#">Crystals</a>
 </li>
 
 </div>
