--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   Need to inquire about any of my products use my <a class="nodeco"href="contact.html">contact page.</a>
   </p>
   <p>
-    <div class="embedsocial-hashtag" data-ref="5cbfd4a35a2c2b54284218880f60fef22f1fdf69"> <a class="feed-powered-by-es feed-powered-by-es-feed-new" href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Widget by EmbedSocial"> Widget by EmbedSocial<span>→</span> </a> </div> <script> (function(d, s, id) { var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js); }(document, "script", "EmbedSocialHashtagScript")); </script>
-  </p>.
+
+  </p>
 <p>
        <audio controls>
        <source src="audio/zen.mp3" type="audio/mpeg">
@@ -58,36 +58,31 @@
 
 
     </li>
-
+     
 <div class="cat">
 <li>
   <a href="AllCandles.html">
-  <img src="p/1.jpg" alt="example candle" width="125" height="150">
+  <img src="p/1.jpg" alt="example candle" width="175" height="200">
     </a>
     <br>
   <a href="AllCandles.html">Candles</a>
 </li>
 <li>
   <a href="AllPaintings.html">
-  <img src="p/3.jpg" alt="small Paintings" width="125" height="150">
+  <img src="p/3.jpg" alt="small Paintings" width="175" height="200">
   <br>
 <a href="AllPaintings.html">Painting</a>
 </li>
 <li>
-  <a href="Bath_Butters_Oils.html"><img src="p/6.jpg" alt="bodybutter" width="125" height="150"></a>
+  <a href="Bath_Butters_Oils.html"><img src="p/6.jpg" alt="bodybutter" width="175" height="200"></a>
   <br>
 
 <a href="Bath_Butters_Oils.html">Bath, Butters, Oils</a>
 </li>
 <li>
-  <a href="#"><img src="images/t.jpg" alt="Apperel" width="125" height="150"></a>
+  <a href="AllCrystals.html"><img src="p/16.jpg" alt="Apperel" width="175" height="200"></a>
   <br>
-  <a href="#">Apparel</a>
-</li>
-<li>
-  <a href="#"><img src="images/c.jpg" alt="Apperel" width="125" height="150"></a>
-  <br>
-  <a href="#">Natural Cleaners</a>
+  <a href="#">Crystals</a>
 </li>
 
 </div>
@@ -103,7 +98,6 @@
 </div>
 </li>
 
-  </li>
 </ul>
 <a href="https://www.usps.com/business/prices.htm" target="_blank">*shipping rate depends on amount of items ordered + size.</a>
 <br>
