--- a/productreviews.html
+++ b/productreviews.html
@@ -45,32 +45,27 @@
 <div class="cat">
 <li>
   <a href="AllCandles.html">
-  <img src="p/1.jpg" alt="example candle" width="125" height="150">
+  <img src="p/1.jpg" alt="example candle" width="175" height="200">
     </a>
     <br>
   <a href="AllCandles.html">Candles</a>
 </li>
 <li>
   <a href="AllPaintings.html">
-  <img src="p/3.jpg" alt="small Paintings" width="125" height="150">
+  <img src="p/3.jpg" alt="small Paintings" width="175" height="200">
   <br>
 <a href="AllPaintings.html">Painting</a>
 </li>
 <li>
-  <a href="Bath_Butters_Oils.html"><img src="p/6.jpg" alt="bodybutter" width="125" height="150"></a>
+  <a href="Bath_Butters_Oils.html"><img src="p/6.jpg" alt="bodybutter" width="175" height="200"></a>
   <br>
 
 <a href="Bath_Butters_Oils.html">Bath, Butters, Oils</a>
 </li>
 <li>
-  <a href="#"><img src="images/t.jpg" alt="Apperel" width="125" height="150"></a>
+  <a href="AllCrystals.html"><img src="p/16.jpg" alt="Apperel" width="175" height="200"></a>
   <br>
-  <a href="#">Apparel</a>
-</li>
-<li>
-  <a href="#"><img src="images/c.jpg" alt="Apperel" width="125" height="150"></a>
-  <br>
-  <a href="#">Natural Cleaners</a>
+  <a href="#">Crystals</a>
 </li>
 
 </div>
