--- a/Crystal.html
+++ b/Crystal.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title>Welcome to Starshine Botanicals / small</title>
+    <title>Welcome to Starshine Botanicals crystal</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
@@ -27,23 +27,23 @@
 
   
 <li class="products">
-  <p><img src="images/excandle.jpg" alt="example candle" width="250" height="300"> </p>
-   <p>Size: Large Spirtual Candle </p>
-    <p>Price: $20  </p>
+  <p><img src="p/16.jpg" alt="example candle" width="250" height="300"> </p>
+   <p>Size: Assorted crystal and stones </p>
+    <p>Price: $6  </p>
     <div class="displaynone">
-      + $15 shipping
+      + $6 shipping
     </div>
-    <p>Color: red </p>
-    <p>Scent: orange </p>
-    <p>Details: Glass Container,long wick
+    <p>Color: multi </p>
+    <p>Scent: none </p>
+    <p>Details: assorted
     </p>
 
 
     <div id="smart-button-container">
       <div style="text-align: center;">
         <div style="margin-bottom: 1.25rem;">
-          <p> Large Spirtual Candle</p>
-          <select id="item-options"><option value="Large Spirtual Candle" price="20"> Large Spirtual Candle - 20 USD</option></select>
+          <p> Assorted crystal and stones</p>
+          <select id="item-options"><option value="Assorted crystal and stones" price="6"> Assorted crystal and stones - 6 USD</option></select>
           <select style="visibility: hidden" id="quantitySelect"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select>
         </div>
       <div id="paypal-button-container"></div>
@@ -59,9 +59,9 @@
     if (!isNaN(quantity)) {
       quantitySelect.style.visibility = "visible";
     }
-    var orderDescription = 'Large Spirtual Candle';
+    var orderDescription = 'Assorted crystal and stones';
     if(orderDescription === '') {
-      orderDescription = 'Glass Container,long wick';
+      orderDescription = 'assorted';
     }
     paypal.Buttons({
       style: {
@@ -167,32 +167,27 @@
 <div class="cat">
 <li>
   <a href="AllCandles.html">
-  <img src="p/1.jpg" alt="example candle" width="125" height="150">
+  <img src="p/1.jpg" alt="example candle" width="175" height="200">
     </a>
     <br>
   <a href="AllCandles.html">Candles</a>
 </li>
 <li>
   <a href="AllPaintings.html">
-  <img src="p/3.jpg" alt="small Paintings" width="125" height="150">
+  <img src="p/3.jpg" alt="small Paintings" width="175" height="200">
   <br>
 <a href="AllPaintings.html">Painting</a>
 </li>
 <li>
-  <a href="Bath_Butters_Oils.html"><img src="p/6.jpg" alt="bodybutter" width="125" height="150"></a>
+  <a href="Bath_Butters_Oils.html"><img src="p/6.jpg" alt="bodybutter" width="175" height="200"></a>
   <br>
 
 <a href="Bath_Butters_Oils.html">Bath, Butters, Oils</a>
 </li>
 <li>
-  <a href="#"><img src="images/t.jpg" alt="Apperel" width="125" height="150"></a>
+  <a href="AllCrystals.html"><img src="p/16.jpg" alt="Apperel" width="175" height="200"></a>
   <br>
-  <a href="#">Apparel</a>
-</li>
-<li>
-  <a href="#"><img src="images/c.jpg" alt="Apperel" width="125" height="150"></a>
-  <br>
-  <a href="#">Natural Cleaners</a>
+  <a href="#">Crystals</a>
 </li>
 
 </div>
