--- a/contact.html
+++ b/contact.html
@@ -25,14 +25,18 @@
   <li><a href="index.html"  target="_parent"><img src="images/card.jpg" alt="logo" width="250" ></a></li>
 <br>
 
-   <p>email:
+   <p>
+    Leave a comment below:
    </p>
    <p>
-    PhoneNumber:
+     <li>
+      <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML </a> is loading comments...</div>
+      <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+      <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16798&num=10&ts=1662682564112");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+     </li>
    </p>
-   <p>
-   social Media:
-   </p>
+   <div class="embedsocial-hashtag" data-ref="5cbfd4a35a2c2b54284218880f60fef22f1fdf69"> <a class="feed-powered-by-es feed-powered-by-es-feed-new" href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Widget by EmbedSocial"> Widget by EmbedSocial<span>→</span> </a> </div> <script> (function(d, s, id) { var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js); }(document, "script", "EmbedSocialHashtagScript")); </script>
+
   <li>
 
 <div class="footer-social-links displaynone">
@@ -47,32 +51,27 @@
 <div class="cat">
 <li>
   <a href="AllCandles.html">
-  <img src="p/1.jpg" alt="example candle" width="125" height="150">
+  <img src="p/1.jpg" alt="example candle" width="175" height="200">
     </a>
     <br>
   <a href="AllCandles.html">Candles</a>
 </li>
 <li>
   <a href="AllPaintings.html">
-  <img src="p/3.jpg" alt="small Paintings" width="125" height="150">
+  <img src="p/3.jpg" alt="small Paintings" width="175" height="200">
   <br>
 <a href="AllPaintings.html">Painting</a>
 </li>
 <li>
-  <a href="Bath_Butters_Oils.html"><img src="p/6.jpg" alt="bodybutter" width="125" height="150"></a>
+  <a href="Bath_Butters_Oils.html"><img src="p/6.jpg" alt="bodybutter" width="175" height="200"></a>
   <br>
 
 <a href="Bath_Butters_Oils.html">Bath, Butters, Oils</a>
 </li>
 <li>
-  <a href="#"><img src="images/t.jpg" alt="Apperel" width="125" height="150"></a>
+  <a href="AllCrystals.html"><img src="p/16.jpg" alt="Apperel" width="175" height="200"></a>
   <br>
-  <a href="#">Apparel</a>
-</li>
-<li>
-  <a href="#"><img src="images/c.jpg" alt="Apperel" width="125" height="150"></a>
-  <br>
-  <a href="#">Natural Cleaners</a>
+  <a href="#">Crystals</a>
 </li>
 
 </div>
