--- a/contact.html
+++ b/contact.html
@@ -26,15 +26,65 @@
 <br>
 
    <p>
-    Leave a comment below:
-   </p>
-   <p>
      <li>
-      <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML </a> is loading comments...</div>
-      <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
-      <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16798&num=10&ts=1662682564112");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+       <div id="contact"
+       style="
+       width: 100%;
+       border: 0;
+       margin: 0;
+       display: flex-box;
+justify-content: center;;
+
+        ">
+         <h2>Contact Me Here</h2>
+           <div id="contact-form">
+                   <form action="https://formspree.io/f/xqkjwzpk" method="POST">
+                   <input type="hidden" name="_subject" value="Orders, Questions and Contact" />
+                    </br>
+                   Email:
+                   </br>
+                   <input type="email" name="_replyto"
+                   style="width: 350px;height:100px;
+                                    padding: 10px; border:3px solid black;
+                                    background-color:aliceblue; display:block
+
+                                    margin-left: auto;
+                                    opacity: 60%;
+                                    "
+
+                    placeholder="Your email" required>
+
+  </br>
+  <p>
+
+Please include : url of item your inquiring  about, or wish to order. or any other question about the products.
+  </p>
+                   <textarea name="message" placeholder="
+
+
+
+
+                    "
+                   style="width: 350px;height:500px;
+                                    padding: 10px; border:3px solid black;
+                                    background-color:aliceblue;  display:block
+                                    display: block;
+      margin-left: auto;
+      opacity: 60%;
+
+
+
+                                    "
+
+
+                   required></textarea></br>
+                   <button class="button"type="submit">Send</button>
+               </form>
+           </div>
+       </div>
      </li>
    </p>
+
    <div class="embedsocial-hashtag" data-ref="5cbfd4a35a2c2b54284218880f60fef22f1fdf69"> <a class="feed-powered-by-es feed-powered-by-es-feed-new" href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Widget by EmbedSocial"> Widget by EmbedSocial<span>→</span> </a> </div> <script> (function(d, s, id) { var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js); }(document, "script", "EmbedSocialHashtagScript")); </script>
 
   <li>
