--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
   <li>
    <img id="frontpage" src="images/pic.jpg" alt="Owner Picture" width="150" height="150">
   <p>
-   Hi My name is Della Dugger. All of my products are for healing and other uses. They are 100% sustainable handcrafted and repurposable containers.
-   .Each product is made with love for the the purpose of healing, prosperity and abundance. Natural essential oils and all natural herbs are the benefits to these products.
+   Hi My name is Della Dugger. All of my products are for healing and other uses. They are 100% sustainable handcrafted and repurposable containers.This is a US Army Veteran created and operated business.Each product is made with love for the the purpose of healing, prosperity and abundance. Natural essential oils and all natural herbs are the benefits to these products.
   </p>
   <p>
   Need to inquire about any of my products use my <a class="nodeco"href="contact.html">contact page.</a>
