--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
   <p>
   Need to inquire about any of my products use my <a class="nodeco"href="contact.html">contact page.</a>
   </p>
-  <p>
-
+  <p class="Announcement">
+     Bath sets are available $65 dollars including shipping, which includes: herbal candle,cbd bath bomb,body butter, and bath oil or sage stick.
+     Use my <a class="nodeco"href="contact.html">contact page.</a> to inquire, if you need: pictures,or other info about them.
+     i also accept payments through cash app, cc , and paypal. 
   </p>
 <p>
        <audio controls>
