--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
 justify-content: center;;
 
         ">
+        <img src="p/ca.jpg" alt="ca" width="250" height="300">
          <h2>Contact Me Here</h2>
            <div id="contact-form">
                    <form action="https://formspree.io/f/xqkjwzpk" method="POST">
