--- a/Crystal.html
+++ b/Crystal.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
+          <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <!-- Use the title from a page's frontmatter if it has one -->
     <title>Welcome to Starshine Botanicals crystal</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
